fix: page width was larger than expected due to overflow rule on syntax highlight module

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -633,7 +633,7 @@ pre tt:after {
 
 .gatsby-highlight pre[class*='language-'].line-numbers {
   padding: 0 0 0 2.8em;
-  overflow: initial;
+  overflow-y: hidden;
 }
 
 /*
